# hsfive

./: CHANGELOG.md  README.md  flake.nix  hsfive.cabal  rebuild-dumps.sh
app/: Main.hs
app/HsFive/: CoreTypes.hs  UtilityFunctions.hs
lib/HsFive/: Bitshuffle.hs  CoreTypes.hs  Graph.hs  H5Dump.hs  Types.hs  Util.hs
samples/: 201805_WSe2_arpes.dump.txt  bamboo.dump.txt  braggy.dump.txt  committed_type.dump.txt  complex_aux.dump.txt  compressed-virtual.dump.txt  compressed.dump.txt  destfile.dump.txt  dtype.dump.txt  epics.dump.txt  esrf_id15_example1.dump.txt  ewoksid31.dump.txt  file_fail.dump.txt  file_ok.dump.txt  filters.dump.txt  filters_jpeg.dump.txt  grove.dump.txt  issue_1053.dump.txt  kevlar.dump.txt  links.dump.txt  nexus_malformed.dump.txt  ptycho-siemens-star-id01-result.dump.txt  sample.dump.txt  sample_hsds.dump.txt  stack+.dump.txt  tall.dump.txt  teabag.dump.txt  test_canSAS.dump.txt  test_units.dump.txt  water_224.dump.txt
