cabal-version:      3.4
name:               hsfive
version:            0.1.0.0
synopsis:           Pure Haskell implementation of HDF5
-- description:
homepage:           http://github.com/pmiddend/hsfive
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Philipp Middendorf
maintainer:         philipp.middendorf@desy.de
-- copyright:
category:           Codec
build-type:         Simple
extra-doc-files:    CHANGELOG.md

extra-source-files:
    LICENSE.bitshuffle
  , README.lz4.md
  , LICENSE.lz4
  , lz4.h
  , lz4.c
  , iochain.h
  , iochain.c
  , bitshuffle_internals.h
  , bitshuffle.h
  , bitshuffle_core.h
  , bitshuffle_core.c
  , bitshuffle.c

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  HsFive.Util
                    , HsFive.Bitshuffle
                    , HsFive.UtilityFunctions
                    , HsFive.Types
                    , HsFive.H5Dump
                    -- , HsFive.Graph
                    , HsFive.CoreTypes
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
                    , bytestring
                    , text
                    , file-io
                    , filepath
                    , binary
                    , safe
                    , mtl
    hs-source-dirs:   lib
    default-language: Haskell2010
    c-sources: cbits/lz4.c cbits/bitshuffle.c cbits/bitshuffle_core.c cbits/iochain.c
    include-dirs: cbits

executable hsfive
    import:           warnings
    main-is:          Main.hs
    -- other-extensions:
    build-depends:
        base ^>=4.19.2.0,
        hsfive,
        bytestring,
        file-io,
        filepath,
        text,
        binary,
        mtl,
        safe

    hs-source-dirs:   app
    default-language: Haskell2010
